add expand/collapse all buttons to accordion

--- a/webui/static/index.html
+++ b/webui/static/index.html
@@ -112,7 +112,13 @@
 
         <!-- Roam details -->
         <div class="panel">
-          <h3>Roam Details</h3>
+          <div style="display:flex;justify-content:space-between;align-items:center;">
+            <h3>Roam Details</h3>
+            <div id="roamsButtons">
+              <button id="btnExpandAll" class="pill">Expand All</button>
+              <button id="btnCollapseAll" class="pill">Collapse All</button>
+            </div>
+          </div>
           <div id="roams"></div>
         </div>
       </section>
